--- a/todo/index.html
+++ b/todo/index.html
@@ -24,5 +24,9 @@
         <i class="fas fa-plus-square"></i>
       </button>
     </form>
+    <div class="todo-container">
+      <ul class="todo-list"></ul>
+    </div>
+    <script src="app.js"></script>
   </body>
 </html>
