--- a/todo/index.html
+++ b/todo/index.html
@@ -23,6 +23,13 @@
       <button class="todo-button" type="submit">
         <i class="fas fa-plus-square"></i>
       </button>
+      <div class="select-container">
+        <select class="filter-todo" name="select-todos">
+          <option value="all">All</option>
+          <option value="completed">Completed</option>
+          <option value="uncompleted">Uncompleted</option>
+        </select>
+      </div>
     </form>
     <div class="todo-container">
       <ul class="todo-list"></ul>
