--- a/todo/index.html
+++ b/todo/index.html
@@ -19,7 +19,11 @@
       <h1>Javascript To-DO List</h1>
     </header>
     <form action="">
-      <input class="todo-input" type="text" />
+      <input
+        class="todo-input"
+        type="text"
+        placeholder="Task you spposed to do ..."
+      />
       <button class="todo-button" type="submit">
         <i class="fas fa-plus-square"></i>
       </button>
